# reflow_oven_controller

./: CMakeLists.txt  README.md  sdkconfig
.github/workflows/: greetings.yml  main.yaml
components/lv_examples/: lv_ex_conf.h
components/lv_examples/lv_examples/lv_tutorial/1_hello_world/: lv_tutorial_hello_world.c
components/lv_examples/lv_examples/lv_tutorial/8_animations/: lv_tutorial_animations.c
components/lvgl/: lv_conf.h
components/lvgl_ili9341/: disp_spi.c  tp_spi.c  tp_spi.h  xpt2046.c
documentation/: state_machine.puml
main/: CMakeLists.txt  configuration.h  elegance4.c  gui.c  gui.h  heater.c  heater.h  main.c  max6675_spi.c  max6675_spi.h  maxim_max6675.c  maxim_max6675.h  panic.c  panic.h  reflow_profile.c  reflow_profile.h  reflow_timer.c  reflow_timer.h  spi.c  spi.h  thermocouple.c  thermocouple.h  wdt.c  wdt.h
main/gui/: gui.c  gui.h
main/gui/gui_ctrls/: gui_ctrls_main.c  gui_ctrls_main.h  gui_ctrls_profile.c  gui_ctrls_profile.h
main/gui/gui_views/: gui_views_main.c  gui_views_main.h  gui_views_profile.c  gui_views_profile.h
main/state_machine/: state_machine.c  state_machine.h  state_machine_task.c  state_machine_task.h
main/state_machine/states/: state_machine_states.c  state_machine_states.h
tests/: CMakeLists.txt  heater_tests.cpp
tests/mocks/: CMakeLists.txt
tests/mocks/driver/: esp_task_wdt.c  esp_task_wdt.h  gpio.c  gpio_spy.h
tests/mocks/freertos/: FreeRTOS.h  queue.c  queue.h  task.c  task.h
tests/mocks/hal/: thermocouple_fake.c  thermocouple_fake.h
